# inventario-hogar

./: .gitignore  Cargo.toml  package-lock.json
examples/: basico.rs  gestor_interactivo.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
src/: config.rs  hogar.rs  item.rs  lib.rs  rutas.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
