[package]
name = "inventario-hogar-tauri"
version = "0.1.0"
description = "A Tauri App for household inventory management"
authors = ["you"]
edition = "2021"

[lib]
name = "inventario_hogar_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["fs-all", "dialog-all"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# Nuestra librería local
inventario-hogar = { path = ".." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]