[package]
name = "inventario-hogar-tauri"
version = "0.1.0"
description = "A Tauri App for household inventory"
edition = "2021"

[lib]
name = "inventario_hogar_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }

# Nuestra librería local
inventario-hogar = { path = ".." }

[features]
default = []
